# SmartClac

./: .gitignore  README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  calcplot.cpp  calcplot.h  calcplot.h.autosave  calculate.cpp  calculate.h  controller.cpp  controller.h  credit.cpp  credit.h  deposit.h  dvi.html  test_calculate.cc
src/controller/: controller.cc  controller.h
src/model/: calcplot.cc  calcplot.h  calculate.cc  calculate.h  credit.cc  credit.h  deposit.cc  deposit.h  parser.cc  parser.h  validation.cc  validation.h
src/model/tests/: test_calculate.cc
src/smartclac/: creditwindow.cpp  creditwindow.h  creditwindow.ui  debit.cpp  debit.h  debit.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  smartclac.pro  smartclac.pro.user.398617c
src/view/: creditwindow.cpp  creditwindow.h  creditwindow.ui  debit.cpp  debit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  smartclac.pro
